refactor blue-redis-spring